--- a/.github/workflows/daily_scan.yml
+++ b/.github/workflows/daily_scan.yml
@@ -1,10 +1,10 @@
 name: Daily Option Screener
 
 on:
-  # Schedule: Runs at 14:00 UTC (9:00 AM EST / 6:00 AM PST)
+  # Schedule: # Runs at 18:00 UTC (10:00 AM PST / 11:00 AM PDT)
   # Note: GitHub servers use UTC time.
   schedule:
-    - cron: '0 14 * * 1-5' # Runs Mon-Fri only
+    - cron: '0 18 * * 1-5' # Runs Mon-Fri only
   
   # Manual Trigger: Allows you to click a "Run Now" button in GitHub UI
   workflow_dispatch:
