--- a/.github/workflows/daily_scan.yml
+++ b/.github/workflows/daily_scan.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Install Dependencies
         run: uv sync --frozen
 
+      - name: Create config.py from Secret
+        env:
+          CONFIG_DATA: ${{ secrets.CONFIG_FILE_BASE64 }}
+        run: |
+          echo "$CONFIG_DATA" | base64 --decode > config.py
+
       - name: Run Main Script
         env:
           FRED_API_KEY: ${{ secrets.FRED_API_KEY }}
