--- a/.github/workflows/daily_scan.yml
+++ b/.github/workflows/daily_scan.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           CONFIG_DATA: ${{ secrets.CONFIG_FILE_BASE64 }}
         run: |
-          echo "$CONFIG_DATA" | base64 --decode > config.py
+          echo "$CONFIG_DATA" | base64 --decode > shared/config.py
 
       - name: Run Main Script
         env:
