feat(screener): integrate Google Sheets export and update CI workflow

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 FRED_API_KEY=your_fred_key_here
+
 AWS_ACCESS_KEY_ID=your_aws_access_key
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 S3_BUCKET_NAME=your-bucket-name
+AWS_REGION=your_aws_region
+
+GOOGLE_SHEET_ID=your_google_sheet_id_here
+GOOGLE_CREDENTIALS_BASE64=your_base64_encoded_google_credentials_here
