--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "boto3>=1.42.25",
     "fredapi>=0.5.2",
+    "google-auth>=2.47.0",
+    "gspread>=6.2.1",
     "numpy>=2.4.1",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
