--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google-auth>=2.47.0",
     "gspread>=6.2.1",
     "numpy>=2.4.1",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "python-dotenv>=1.2.1",
