--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,15 @@ dependencies = [
     "fredapi>=0.5.2",
     "google-auth>=2.47.0",
     "gspread>=6.2.1",
+    "jupyter>=1.1.1",
+    "matplotlib>=3.10.8",
     "numpy>=2.4.1",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "python-dotenv>=1.2.1",
     "scipy>=1.16.3",
+    "seaborn>=0.13.2",
     "xlsxwriter>=3.2.9",
     "yfinance>=1.0",
 ]
