--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,10 @@ dependencies = [
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "python-dotenv>=1.2.1",
+    "scikit-learn>=1.8.0",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
+    "xgboost>=3.2.0",
     "xlsxwriter>=3.2.9",
     "yfinance>=1.0",
 ]
